--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
-
 {
   "name": "fx-topup-bot",
   "version": "1.0.0",
+  "description": "FX TOP UP BOT",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "telegraf": "^4.12.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "telegraf": "^4.12.2"
   }
 }
