--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-BOT_TOKEN=your_bot_token_here
-ADMINS=7832264582,6926993789
-ADMIN_USERNAME=fxtopup
-ADMIN_PASSWORD=fxbotbyfx
+BOT_TOKEN=7634927433:AAFEFLNY9sPxpR3Z40hFOkSM51dbNkHbEUk
+PORT=3000
